package Protocol;

message C2SLoginReq {
	required string username = 1;
	required string password = 2;
}