package Protocol;

message S2CLoginRsp {
	required bool login_result = 1;
	required bytes failed_reason = 2;
}