package Protocol;

message S2CRegisterRsp {
	required bool register_result = 1;
}