package Protocol;

message C2SGetPlayerProfileReq {
}