package Protocol;

message C2SChatMessageReq {
	required int32 chat_type = 1;
	required bytes chat_content = 2;
	optional uint64 private_chat_target = 3;
}