package Protocol;

message S2CChatMessageNotify {
	required int32 chat_type = 1;
	optional bytes source_player = 2;
	required bytes chat_content = 3;
}