package Protocol;

message C2SRoomCancleReq {
	required uint32 id = 1;
}