package Protocol;

message C2SSRoomInfoChangeReq {
	required uint32 id = 1;
	optional string room_name = 2;
	optional string password = 3;
}