package Protocol;

message S2CSRoomInfoChangeRsp {
	required uint32 id = 1;
	optional string room_name = 2;
	optional uint32 player_count = 3;
}