package Protocol;

message C2SEnterRoomReq {
	required uint32 room_id = 1;
	optional string password = 2;
}