package Protocol;

message C2SLeaveRoomReq {
	required uint32 id = 1;
}