package Protocol;

message C2SKickPlayerReq {
	required uint32 id = 1;
	required string kicked_palyer = 2;
}