package Protocol;

message S2CRoomKickedRsp {
}